--- a/index.css
+++ b/index.css
@@ -1,64 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
-
-:root {
-	--color-bg: #001020;
-	--color-fg: #CCCCCC;
-
-	--color-gray: #888888;
-	--color-green: #008800;
-	--color-lime: #00DD00;
-	--color-red: #880000;
-	--color-blue: #0000CC;
-	--color-cyan: #0088FF;
-}
-
 body {
-	background-color: var(--color-bg);
-	color: var(--color-fg);
-	font-family: 'Fira Code', monospace;
-	margin: 1rem;
-	word-break: break-all;
-	font-size: 16px;
+	margin: 0;
 }
 
-span {
-	color: var(--color-fg);
-	white-space: pre;
+#content-area {
+	position: absolute;
+	background-color: white;
+	padding: 8px;
+	width: 640px;
+	min-height: calc(100% - 16px);
 }
 
-span.green {
-	color: var(--color-green);
+@media screen and (min-width: 641px) {
+	#content-area {
+		left: 50%;
+		transform: translateX(-50%);
+	}
 }
 
-span.lime {
-	color: var(--color-lime);
+table, td, th {
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
 }
 
-span.red {
-	color: var(--color-red);
-}
-
-span.gray {
-	color: var(--color-gray);
-}
-
-span.blue {
-	color: var(--color-blue);
-}
-
-span.cyan {
-	color: var(--color-cyan);
-}
-
-input {
-	margin: 0px;
-	padding: 0px;
-	height: 1em;
-	background-color: transparent;
-	border: none;
-	color: inherit;
-	font-size: inherit;
-	font-family: inherit;
-	outline: none;
-	width: calc(100% - 38em);
+p {
+	text-indent: 32px;
 }
